# relatorios

./: .gitignore  Dockerfile  README.md  index.html  main.py  pyproject.toml  requirements.txt  tickers.yaml
.github/workflows/: actions.yml
docs/: index.html  ticker_data.json
src/: tickers.yaml
