[tool.poetry]
name = "relatorios"
version = "1.0.0"
description = ""
authors = ["ryuvi <vicenters10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
yfinance = "^0.2.43"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
mplcyberpunk = "^0.7.1"
jinja2 = "^3.1.4"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
setuptools = "^74.1.2"
schedule = "^1.2.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
